--- a/src/main/resources/assets/fluidcows/lang/en_us.json
+++ b/src/main/resources/assets/fluidcows/lang/en_us.json
@@ -1,7 +1,10 @@
 {
   "jade.fluidcows.milk_cooldown": "Milking CoolDown: %s",
   "item.fluidcows.fluid_cow_spawn_egg": "Fluid Cow Spawn Egg",
+  "item.fluidcows.cow_snatcher": "Cow Snatcher",
   "entity.fluidcows.fluid_cow": "Fluid Cow",
   "itemGroup.fluidcows.main": "Fluid Cows",
-  "item.fluidcows.fluid_cow_item": "Fluid Cow"
+  "item.fluidcows.fluid_cow_item": "Fluid Cow",
+  "key.categories.fluidcows": "Fluid Cows",
+  "key.fluidcows.config": "Open Config"
 }
